[gd_scene load_steps=2 format=3 uid="uid://nt64rlir5ahd"]

[ext_resource type="Script" path="res://scripts/interface/settings_menu.gd" id="1_vvv1q"]

[node name="Settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvv1q")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.5
offset_top = 105.0
offset_right = 207.5
offset_bottom = 221.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 96
text = "Settings"
horizontal_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -98.0
offset_right = -82.0
offset_bottom = -55.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Particles" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = -65.5
offset_right = 382.0
offset_bottom = -6.5
grow_vertical = 2
text = "Particles "

[node name="Lighting" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = 28.5
offset_right = 382.0
offset_bottom = 87.5
grow_vertical = 2
text = "Lighting"

[node name="Music" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -409.0
offset_top = -43.0
offset_right = -160.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 2
min_value = -80.0
max_value = 6.0

[node name="Label" type="Label" parent="Music"]
layout_mode = 1
offset_top = -59.0
offset_right = 131.0
text = "Music"

[node name="SFX" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -409.0
offset_top = 65.0
offset_right = -160.0
offset_bottom = 97.0
grow_horizontal = 0
grow_vertical = 2
min_value = -80.0
max_value = 6.0

[node name="Label" type="Label" parent="SFX"]
layout_mode = 1
offset_top = -59.0
offset_right = 131.0
text = "Sound Effects"

[connection signal="toggled" from="Particles" to="." method="_on_particles_toggled"]
[connection signal="toggled" from="Lighting" to="." method="_on_lighting_toggled"]
[connection signal="drag_ended" from="Music" to="." method="_on_music_drag_ended"]
[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="drag_ended" from="SFX" to="." method="_on_sfx_drag_ended"]
[connection signal="value_changed" from="SFX" to="." method="_on_sfx_value_changed"]
